--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,11 @@
-<router-outlet />
+<section>
+    <app-hero-section></app-hero-section>
+    <app-header></app-header>
+    <app-menu-bar></app-menu-bar>
+    <app-why-me-section></app-why-me-section>
+    <app-my-skill-section></app-my-skill-section>
+    <app-references></app-references>
+    <app-contact-section></app-contact-section>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer>
+</section>
