--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+@use './app/shared/styles/fonts.scss' as*;
+$darkgrey-background: rgba(38, 46, 52, 1);
+$font-color: rgba(248, 245, 236, 1);
+$symbol-font-color: rgba(137, 188, 217, 1);
+
+* {
+    margin: 0 auto;
+    box-sizing: border-box;
+    font-family: 'Lato';
+    scroll-behavior: smooth;
+}
+
+a {
+    text-decoration: none;
+}
+
+.title {
+    font-size: 88px;
+    font-weight: bold;
+}
