--- a/src/app/hero-section/hero-section.component.html
+++ b/src/app/hero-section/hero-section.component.html
@@ -1,5 +1,6 @@
-<section>
+<main>
     <content>
-        <p>hero-section works!</p>
+        <img class="profil-pic" src="davidpic.png" alt="">
+        <img class="shape" src="BG-shape.png" alt="">
     </content>
-</section>
+</main>
