--- a/src/app/shared/styles/mixins.scss
+++ b/src/app/shared/styles/mixins.scss
@@ -1,6 +1,10 @@
-@mixin display($display: flex, $flex-direction: row column, $justify-content: center space-between, $align-items: center) {
+@mixin display($display: flex, $flex-direction: row, $justify-content: center, $align-items: center) {
     display: $display;
     flex-direction: $flex-direction;
     justify-content: $justify-content;
     align-items: $align-items;
 }
+
+$darkgrey-background: rgba(38, 46, 52, 1);
+$font-color: rgba(248, 245, 236, 1);
+$symbol-font-color: rgba(137, 188, 217, 1);
